tests/snapshots/snapshots__compile_snapshots@match_range_exec.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_range_exec.zts
---
import { __ztsInRange } from "@zestty/core";
type __ztsRange0 = 400 | 401 | 402 | 403 | 404 | 405 | 406 | 407 | 408 | 409 | 410 | 411 | 412 | 413 | 414 | 415 | 416 | 417 | 418 | 419 | 420 | 421 | 422 | 423 | 424 | 425 | 426 | 427 | 428 | 429 | 430 | 431 | 432 | 433 | 434 | 435 | 436 | 437 | 438 | 439 | 440 | 441 | 442 | 443 | 444 | 445 | 446 | 447 | 448 | 449 | 450 | 451 | 452 | 453 | 454 | 455 | 456 | 457 | 458 | 459 | 460 | 461 | 462 | 463 | 464 | 465 | 466 | 467 | 468 | 469 | 470 | 471 | 472 | 473 | 474 | 475 | 476 | 477 | 478 | 479 | 480 | 481 | 482 | 483 | 484 | 485 | 486 | 487 | 488 | 489 | 490 | 491 | 492 | 493 | 494 | 495 | 496 | 497 | 498 | 499;
type __ztsRange1 = -3 | -2 | -1;
type __ztsRange2 = 7;
type __ztsRange3 = 400 | 401 | 402 | 403 | 404 | 405 | 406 | 407 | 408 | 409 | 410 | 411 | 412 | 413 | 414 | 415 | 416 | 417 | 418 | 419 | 420 | 421 | 422 | 423 | 424 | 425 | 426 | 427 | 428 | 429 | 430 | 431 | 432 | 433 | 434 | 435 | 436 | 437 | 438 | 439 | 440 | 441 | 442 | 443 | 444 | 445 | 446 | 447 | 448 | 449 | 450 | 451 | 452 | 453 | 454 | 455 | 456 | 457 | 458 | 459 | 460 | 461 | 462 | 463 | 464 | 465 | 466 | 467 | 468 | 469 | 470 | 471 | 472 | 473 | 474 | 475 | 476 | 477 | 478 | 479 | 480 | 481 | 482 | 483 | 484 | 485 | 486 | 487 | 488 | 489 | 490 | 491 | 492 | 493 | 494 | 495 | 496 | 497 | 498 | 499;
type __ztsRange4 = 400 | 401 | 402 | 403 | 404 | 405 | 406 | 407 | 408 | 409 | 410 | 411 | 412 | 413 | 414 | 415 | 416 | 417 | 418 | 419 | 420 | 421 | 422 | 423 | 424 | 425 | 426 | 427 | 428 | 429 | 430 | 431 | 432 | 433 | 434 | 435 | 436 | 437 | 438 | 439 | 440 | 441 | 442 | 443 | 444 | 445 | 446 | 447 | 448 | 449 | 450 | 451 | 452 | 453 | 454 | 455 | 456 | 457 | 458 | 459 | 460 | 461 | 462 | 463 | 464 | 465 | 466 | 467 | 468 | 469 | 470 | 471 | 472 | 473 | 474 | 475 | 476 | 477 | 478 | 479 | 480 | 481 | 482 | 483 | 484 | 485 | 486 | 487 | 488 | 489 | 490 | 491 | 492 | 493 | 494 | 495 | 496 | 497 | 498 | 499;
// Executed by tests/tsc_exit.rs under node: range arms must produce the
// RIGHT VALUE at runtime, not merely typecheck. The runtime guarantee is
// narrower than the type: a range arm claims a set of INTEGER literals, so
// a fractional or non-numeric scrutinee has to fall through.
function expect(name: string, got: unknown, want: unknown): void {
    if (got !== want) {
        throw new globalThis.Error(`${name}: got ${String(got)}, want ${String(want)}`);
    }
}
function classify(n: number): string {
    return ((__m)=>{
        if (__ztsInRange<__ztsRange0>(__m, 400, 499)) {
            return "client";
        }
        if (__ztsInRange<__ztsRange1>(__m, -3, -1)) {
            return "small negative";
        }
        if (__ztsInRange<__ztsRange2>(__m, 7, 7)) {
            return "lucky";
        }
        return "other";
    })(n);
}
expect("inside the range", classify(404), "client");
expect("lower bound is inclusive", classify(400), "client");
expect("upper bound is inclusive", classify(499), "client");
expect("just below", classify(399), "other");
expect("just above", classify(500), "other");
// A fractional value sits numerically inside 400..=499 but is not one of
// the literals the arm claims — the `% 1 === 0` gate is what keeps the
// type honest.
expect("fractional inside the bounds", classify(404.5), "other");
expect("NaN", classify(globalThis.NaN), "other");
expect("Infinity", classify(globalThis.Infinity), "other");
expect("negative range", classify(-2), "small negative");
expect("negative just outside", classify(-4), "other");
expect("degenerate range", classify(7), "lucky");
expect("degenerate range miss", classify(8), "other");
// Mixed scrutinee: the predicate's parameter is `unknown` precisely so a
// string can reach it and be rejected.
function classifyMixed(v: number | string): string {
    return ((__m)=>{
        if (__ztsInRange<__ztsRange3>(__m, 400, 499)) {
            return "client";
        }
        if (__m === "unknown") {
            return "unknown";
        }
        return "other";
    })(v);
}
expect("string that looks like a code", classifyMixed("404"), "other");
expect("string member still matches", classifyMixed("unknown"), "unknown");
expect("number member still matches", classifyMixed(404), "client");
// First match wins, in source order — a literal arm before a range that
// contains it stays reachable.
function firstMatchWins(n: number): string {
    return ((__m)=>{
        if (__m === 404) {
            return "not found";
        }
        if (__ztsInRange<__ztsRange4>(__m, 400, 499)) {
            return "client";
        }
        return "other";
    })(n);
}
expect("earlier literal wins", firstMatchWins(404), "not found");
expect("range still catches the rest", firstMatchWins(403), "client");
console.log("match_range_exec: all assertions passed");
