tests/snapshots/snapshots__compile_snapshots@match_range_mixed.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_range_mixed.zts
---
import { __ztsInRange } from "@zestty/core";
type __ztsRange0 = 400 | 401 | 402 | 403 | 404 | 405 | 406 | 407 | 408 | 409 | 410 | 411 | 412 | 413 | 414 | 415 | 416 | 417 | 418 | 419 | 420 | 421 | 422 | 423 | 424 | 425 | 426 | 427 | 428 | 429 | 430 | 431 | 432 | 433 | 434 | 435 | 436 | 437 | 438 | 439 | 440 | 441 | 442 | 443 | 444 | 445 | 446 | 447 | 448 | 449 | 450 | 451 | 452 | 453 | 454 | 455 | 456 | 457 | 458 | 459 | 460 | 461 | 462 | 463 | 464 | 465 | 466 | 467 | 468 | 469 | 470 | 471 | 472 | 473 | 474 | 475 | 476 | 477 | 478 | 479 | 480 | 481 | 482 | 483 | 484 | 485 | 486 | 487 | 488 | 489 | 490 | 491 | 492 | 493 | 494 | 495 | 496 | 497 | 498 | 499;
type __ztsRange1 = -3 | -2 | -1;
type __ztsRange2 = 0;
type __ztsRange3 = 7;
type __ztsRange4 = 16 | 17 | 18 | 19 | 20 | 21 | 22 | 23 | 24 | 25 | 26 | 27 | 28 | 29 | 30 | 31;
// The shapes that are not the http-status case: negative bounds, the
// degenerate `lo == hi` range, a literal arm BEFORE a range that contains
// it (specific-case-first, which stays legal), and a `_` tail over an open
// `number` scrutinee.
export function describe(n: number): string {
    return ((__m)=>{
        if (__m === 404) {
            return "not found";
        }
        if (__ztsInRange<__ztsRange0>(__m, 400, 499)) {
            return "client error";
        }
        if (__ztsInRange<__ztsRange1>(__m, -3, -1)) {
            return "small negative";
        }
        if (__ztsInRange<__ztsRange2>(__m, 0, 0)) {
            return "zero";
        }
        if (__ztsInRange<__ztsRange3>(__m, 7, 7)) {
            return "lucky";
        }
        return "other";
    })(n);
}
// Radix-prefixed bounds are integer literals by construction, and the
// literals the author wrote survive into the call (only the erased alias
// is enumerated).
//
// Range BOUNDS are checked by their written form, so `4e2..=4e3` is an
// error even though both values are whole: a bound is the start of an
// enumeration and has to read like one. `union` MEMBERS are checked by
// value instead — they are never enumerated, and the value rule is what
// makes `1` and `1.0` a duplicate-member error rather than a silently
// deduplicated type.
export function mask(n: number): string {
    return ((__m)=>{
        if (__ztsInRange<__ztsRange4>(__m, 0x10, 0x1f)) {
            return "low nibble set";
        }
        return "other";
    })(n);
}
