tests/snapshots/snapshots__compile_snapshots@match_range_open_number.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_range_open_number.zts
---
import { __ztsAbsurd, __ztsInRange } from "@zestty/core";
type __ztsRange0 = 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9;
// A ranged match over an OPEN `number` with no `_`: this compiles, and
// tsc must REJECT it — a range cannot prove it covers `number`. The
// compiler never decides whether `_` is required; tsc does.
export function digit(n: number): string {
    return ((__m)=>{
        if (__ztsInRange<__ztsRange0>(__m, 0, 9)) {
            return "digit";
        }
        return __ztsAbsurd(__m);
    })(n);
}
