tests/snapshots/snapshots__compile_snapshots@match_shadowed_error.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_shadowed_error.zts
---
function __ztsAbsurd(x: never): never {
    const e: any = new globalThis.Error("zts: non-exhaustive match");
    e.ztsTag = x;
    throw e;
}
export { };
type T = {
    kind: "K";
    v: number;
} | {
    kind: "L";
    w: number;
};
declare const t: T;
class Error {
    constructor(public msg: string){}
}
let e: Error = new Error("hi");
const r = ((__m)=>{
    const __k = __m.kind;
    if (__k === "K") {
        const { v } = __m;
        return v;
    }
    if (__k === "L") {
        const { w } = __m;
        return w;
    }
    return __ztsAbsurd(__k);
})(t);
void e;
void r;
