tests/snapshots/snapshots__compile_snapshots@match_single_variant.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/match_single_variant.zts
---
function __ztsAbsurd(x: never): never {
    const e: any = new globalThis.Error("zts: non-exhaustive match");
    e.ztsTag = x;
    throw e;
}
type Only = {
    kind: "K";
    v: number;
};
declare const t: Only;
const r = ((__m)=>{
    const __k = __m.kind;
    if (__k === "K") {
        const { v } = __m;
        return v * 2;
    }
    return __ztsAbsurd(__k);
})(t);
